Added some improvement and implemented the get route
